--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,17 @@
 name: CI
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - main
+      - 'temp-*'
+  pull_request:
+    branches:
+      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
+      - ready_for_review
 permissions: {}
 jobs:
   check-latest-versions:
@@ -10,7 +20,7 @@ jobs:
     runs-on: 'ubuntu-24.04'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Check latest versions
         run: ./check-latest-versions.sh
   build:
@@ -53,7 +63,7 @@ jobs:
             platform: 'linuxmusl-arm64v8'
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Install dependencies (macOS)
         if: runner.os == 'macOS'
         run: |
@@ -62,7 +72,7 @@ jobs:
       - name: Build ${{ matrix.platform }}
         run: ./build.sh ${{ matrix.platform }}
       - name: Upload ${{ matrix.platform }} artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v6
         with:
           name: build-${{ matrix.platform }}
           path: '*.tar.gz'
@@ -77,13 +87,13 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: Install Node.js
-        uses: actions/setup-node@v5
+        uses: actions/setup-node@v6
         with:
           node-version: '24'
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Download build artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           merge-multiple: true
       - name: Populate npm workspace
