CI: Ensure latest version check halts on updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v6
       - name: Check latest versions
-        run: ./check-latest-versions.sh && git status --porcelain
+        run: ./check-latest-versions.sh && git diff --quiet
   build:
     permissions:
       contents: read
